<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    android:background="@drawable/background_list"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp">
    
    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_marginStart="16dp" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/planName"
            android:text="@string/planName"
            android:layout_marginTop="19dp"
            android:textSize="22sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/memo"
            android:textSize="13sp"
            android:textColor="#000"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date2"
            android:textSize="15sp"
            android:textColor="#00f"/>

        <TextView
            android:id="@+id/time"
            android:text="@string/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="12sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/Monday"
            android:textSize="12sp"
            android:textColor="#000" />

        <TextView
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/on"
            android:layout_marginTop="3dp"
            android:textColor="#000"/>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/completeOX"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textOn="@string/complete"
        android:textOff="@string/unComplete">

    </ToggleButton>
</LinearLayout>