<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="#000" >

        <Button
            android:id="@+id/BackHome"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/backHome"
            android:background="#000"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFF"/>

        <TextView
            android:id="@+id/MyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/my_list"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#FFF"/>

        <TextView
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#FFFF"
            android:textAlignment="center"
            android:layout_marginTop="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MyPlans"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="1dp"
        tools:ignore="MissingConstraints">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/addNewButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/addButton"
        android:textSize="30sp"
        android:textColor="#FFF"
        android:background="@drawable/background_addbutton"
        android:contentDescription="@string/add"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

    </Button>

</LinearLayout>