<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="#000"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/background_menu"
                android:text="@string/Menu"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/MyList"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/did_u"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_menu"
                android:text="@string/user"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000" />
    </LinearLayout>

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-100dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/background_calendar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MyPlans"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="1dp"
        tools:ignore="MissingConstraints">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addNewButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/background_addbutton"
            android:text="@string/addButton"
            android:textColor="#FFF"
            android:textSize="30sp"
            style="?android:attr/buttonBarButtonStyle">

        </Button>

        <Button
            android:id="@+id/showListButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/showList"
            android:textSize="30sp"
            android:textColor="#FFF"
            android:background="@drawable/background_addbutton"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="100dp"
            style="?android:attr/buttonBarButtonStyle" >
        </Button>
    </LinearLayout>

</LinearLayout>